--- a/Strona.html
+++ b/Strona.html
@@ -4,17 +4,22 @@
 <head>
 <style>
 .myDiv {
-  high: 100%;
-  border: 5px outset black;
-  background-color: gray;
-  text-align: center;
+	width:40%;
+	border: 5px outset black;
+	background-color: gray;
+	text-align: center;
 }
 </style>
 </head>
 <body>
 <h1>Nareczka</h1>
+<div style={float: right;}>
 <div class="myDiv">
 <h3>To jest div</h3>
+</div>
+<div class="myDiv" style={float: left};>
+<h3>To jest div2</h3>
+</div>
 </div>
 <p1>Siemaneczko</p1>
 </body>
